--- a/test/fixtures/events.yml
+++ b/test/fixtures/events.yml
@@ -1,11 +1,13 @@
 # Read about fixtures at https://api.rubyonrails.org/classes/ActiveRecord/FixtureSet.html
 
 one:
-  title: MyString
+  date: 2024-09-18 19:41:53
+  theme: MyString
   description: MyText
-  event_date: 2024-09-08 16:13:22
+  organization: one
 
 two:
-  title: MyString
+  date: 2024-09-18 19:41:53
+  theme: MyString
   description: MyText
-  event_date: 2024-09-08 16:13:22
+  organization: two
